--- a/package.json
+++ b/package.json
@@ -35,8 +35,12 @@
 	},
 	"devDependencies": {
 		"@kilcekru/ts-basics": "^3.1.1",
+		"eslint": "^8.28.0",
+		"eslint-plugin-css-modules": "^2.11.0",
+		"eslint-plugin-solid": "^0.9.1",
 		"husky": "^8.0.2",
 		"prettier": "^2.8.0",
-		"typescript": "^4.9.3"
+		"typescript": "^4.9.3",
+		"typescript-plugin-css-modules": "^3.4.0"
 	}
 }
