--- a/packages/apps/launcher/tsconfig.json
+++ b/packages/apps/launcher/tsconfig.json
@@ -1,4 +1,4 @@
 {
 	"extends": "../../../utils/config/tsconfig.ui.json",
-	"include": ["src", "../../../utils/config/less.d.ts"]
+	"include": ["src"]
 }
