--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
 		"forge:package": "cd forge && pnpm package",
 		"forge:clean": "cd forge && pnpm -s clean",
 		"forge:clean:all": "cd forge && pnpm -s clean:all",
-		"lint": "pnpm -r lint",
 		"postinstall": "cd forge && pnpm i",
 		"prepare": "husky install utils/husky",
 		"prettier": "prettier --write .",
-		"validate": "pnpm -r validate"
+		"validate": "pnpm validate:ts && pnpm validate:lint",
+		"validate:lint": "turbo run validate:lint",
+		"validate:ts": "turbo run validate:ts"
 	},
 	"devDependencies": {
 		"@kilcekru/ts-basics": "^3.1.1",
@@ -40,6 +41,7 @@
 		"eslint-plugin-solid": "^0.9.1",
 		"husky": "^8.0.2",
 		"prettier": "^2.8.0",
+		"turbo": "^1.6.3",
 		"typescript": "^4.9.3",
 		"typescript-plugin-css-modules": "^3.4.0"
 	}
