--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
 		"build:ts": "cd utils/build && pnpm build",
 		"clean": "pnpm -sr --parallel clean && pnpm forge:clean",
 		"clean:all": "pnpm -r --parallel clean:all && rm -rf node_modules && pnpm forge:clean:all",
-		"forge:package": "cd forge && pnpm package",
+		"dev": "run-p -r dev:build forge:start",
+		"dev:build": "cd utils/build && pnpm watch",
 		"forge:clean": "cd forge && pnpm -s clean",
 		"forge:clean:all": "cd forge && pnpm -s clean:all",
+		"forge:package": "cd forge && pnpm package",
+		"forge:start": "cd forge && pnpm start",
 		"postinstall": "cd forge && pnpm i",
 		"prepare": "husky install utils/husky",
 		"prettier": "prettier --write .",
@@ -40,6 +43,7 @@
 		"eslint-plugin-css-modules": "^2.11.0",
 		"eslint-plugin-solid": "^0.9.1",
 		"husky": "^8.0.2",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^2.8.0",
 		"turbo": "^1.6.3",
 		"typescript": "^4.9.3",
