--- a/packages/shared/rpc-types/package.json
+++ b/packages/shared/rpc-types/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@kilcekru/dcc-app-launcher",
+	"name": "@kilcekru/dcc-shared-rpc-types",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -8,8 +8,6 @@
 		"validate:lint": "eslint src",
 		"validate:ts": "tsc --noEmit"
 	},
-	"dependencies": {
-		"solid-js": "1.6.2",
-		"@kilcekru/dcc-lib-rpc": "workspace:*"
-	}
+	"dependencies": {},
+	"devDependencies": {}
 }
