--- a/packages/chief/core/package.json
+++ b/packages/chief/core/package.json
@@ -11,7 +11,8 @@
 	"dependencies": {
 		"chokidar": "^3.5.3",
 		"electron-squirrel-startup": "^1.0.0",
-		"fs-extra": "^11.1.0"
+		"fs-extra": "^11.1.0",
+		"regedit": "^5.1.1"
 	},
 	"devDependencies": {
 		"@kilcekru/dcc-shared-rpc-types": "workspace:*",
