--- a/packages/apps/campaign/package.json
+++ b/packages/apps/campaign/package.json
@@ -15,8 +15,9 @@
 		"esri-leaflet": "3.0.9",
 		"fast-astar": "1.0.6",
 		"milsymbol": "2.0.0",
-		"@zag-js/solid": "0.2.3",
-		"@zag-js/pressable": "0.3.5"
+		"@zag-js/solid": "0.2.4",
+		"@zag-js/pressable": "0.3.6",
+		"@zag-js/checkbox": "0.2.7"
 	},
 	"devDependencies": {
 		"@types/leaflet": "1.9.0"
