--- a/packages/apps/campaign/package.json
+++ b/packages/apps/campaign/package.json
@@ -15,9 +15,10 @@
 		"esri-leaflet": "3.0.9",
 		"fast-astar": "1.0.6",
 		"milsymbol": "2.0.0",
-		"@zag-js/solid": "0.2.4",
+		"@zag-js/checkbox": "0.2.7",
+		"@zag-js/dialog": "0.2.6",
 		"@zag-js/pressable": "0.3.6",
-		"@zag-js/checkbox": "0.2.7"
+		"@zag-js/solid": "0.2.4"
 	},
 	"devDependencies": {
 		"@types/leaflet": "1.9.0"
