--- a/.gitignore
+++ b/.gitignore
@@ -191,7 +191,7 @@ dist
 
 ### VisualStudioCode ###
 .vscode/*
-# !.vscode/settings.json
+!.vscode/settings.json
 # !.vscode/tasks.json
 # !.vscode/launch.json
 # !.vscode/extensions.json
