--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"build:ts": "cd utils/build && pnpm build",
 		"clean": "pnpm -sr --parallel clean && pnpm forge:clean",
 		"clean:all": "pnpm -r --parallel clean:all && rm -rf node_modules && pnpm forge:clean:all",
+		"dcsjs:latest": "pnpm up -r @foxdelta2/dcsjs@latest",
 		"dev": "run-p -r dev:build forge:start",
 		"dev:build": "cd utils/build && pnpm watch",
 		"forge:clean": "cd forge && pnpm -s clean",
@@ -41,11 +42,11 @@
 		"@kilcekru/ts-basics": "^3.1.1",
 		"eslint": "^8.28.0",
 		"eslint-plugin-solid": "^0.9.1",
-		"husky": "^8.0.2",
+		"husky": "^8.0.3",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^2.8.0",
+		"prettier": "^2.8.1",
 		"turbo": "^1.6.3",
-		"typescript": "^4.9.3",
+		"typescript": "^4.9.4",
 		"typescript-plugin-css-modules": "^3.4.0"
 	}
 }
