feat(campaign): mission generation

--- a/packages/apps/campaign/package.json
+++ b/packages/apps/campaign/package.json
@@ -10,10 +10,11 @@
 	},
 	"dependencies": {
 		"@kilcekru/dcc-lib-rpc": "workspace:*",
-		"@zag-js/checkbox": "0.2.7",
-		"@zag-js/dialog": "0.2.6",
-		"@zag-js/pressable": "0.3.6",
-		"@zag-js/solid": "0.2.4",
+		"@zag-js/checkbox": "0.2.8",
+		"@zag-js/editable": "0.2.8",
+		"@zag-js/dialog": "0.2.7",
+		"@zag-js/pressable": "0.3.7",
+		"@zag-js/solid": "0.2.5",
 		"esri-leaflet": "3.0.9",
 		"fast-astar": "1.0.6",
 		"leaflet": "1.9.3",
@@ -21,7 +22,7 @@
 		"solid-js": "1.6.2"
 	},
 	"devDependencies": {
-		"@foxdelta2/dcsjs": "0.2.58",
+		"@foxdelta2/dcsjs": "0.2.67",
 		"@types/leaflet": "1.9.0"
 	}
 }
