feat(campaign): logic

--- a/packages/apps/campaign/package.json
+++ b/packages/apps/campaign/package.json
@@ -11,10 +11,11 @@
 	"dependencies": {
 		"@kilcekru/dcc-lib-rpc": "workspace:*",
 		"@zag-js/checkbox": "0.2.8",
-		"@zag-js/editable": "0.2.8",
 		"@zag-js/dialog": "0.2.7",
+		"@zag-js/editable": "0.2.8",
 		"@zag-js/pressable": "0.3.7",
 		"@zag-js/solid": "0.2.5",
+		"cnbuilder": "3.1.0",
 		"esri-leaflet": "3.0.9",
 		"fast-astar": "1.0.6",
 		"leaflet": "1.9.3",
@@ -22,7 +23,7 @@
 		"solid-js": "1.6.2"
 	},
 	"devDependencies": {
-		"@foxdelta2/dcsjs": "0.2.67",
+		"@foxdelta2/dcsjs": "0.2.83",
 		"@types/leaflet": "1.9.0"
 	}
 }
