feat(core): add appMenu & contextMenu

--- a/packages/chief/preload/tsconfig.json
+++ b/packages/chief/preload/tsconfig.json
@@ -1,4 +1,4 @@
 {
-	"extends": "@kilcekru/ts-basics/tsconfig-node-app.json",
+	"extends": "../../../utils/config/tsconfig.ui.json",
 	"include": ["src"]
 }
