--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kilcekru/dcc",
 	"version": "0.1.0",
-	"description": "DCS Crew Chief",
+	"description": "Digital Crew Chief",
 	"private": true,
 	"license": "MIT",
 	"main": "src/index.js",
@@ -29,8 +29,10 @@
 		"dev:build": "cd utils/build && pnpm watch",
 		"forge:clean": "cd forge && pnpm -s clean",
 		"forge:clean:all": "cd forge && pnpm -s clean:all",
+		"forge:make": "cd forge && pnpm make",
 		"forge:package": "cd forge && pnpm package",
 		"forge:start": "cd forge && pnpm start",
+		"make": "pnpm build:ts && pnpm forge:make",
 		"postinstall": "cd forge && pnpm i",
 		"prepare": "husky install utils/husky",
 		"prettier": "prettier --write .",
