build(dcsjs): link via tsconfig for easier development

--- a/packages/chief/core/tsconfig.json
+++ b/packages/chief/core/tsconfig.json
@@ -3,6 +3,8 @@
 	"compilerOptions": {
 		"paths": {
 			"@kilcekru/dcc-shared-*": ["../../shared/*/src/index.ts"]
+			// for easier development of campaign using dcsjs, uncomment following line
+			// "@foxdelta2/dcsjs": ["../../../../dcsjs/src/index.ts"]
 		}
 	},
 	"include": ["src", "src/@types"]
