--- a/utils/config/tsconfig.ui.json
+++ b/utils/config/tsconfig.ui.json
@@ -8,6 +8,8 @@
 		"target": "ES2021",
 		"plugins": [{ "name": "typescript-plugin-css-modules" }],
 		"paths": {
+			// for easier development of campaign using dcsjs, uncomment following line
+			// "@foxdelta2/dcsjs": ["../../../../dcsjs/src/index.ts"],
 			"@kilcekru/dcc-shared-*": ["../../packages/shared/*/src/index.ts"],
 			"@kilcekru/dcc-lib-*": ["../../packages/libs/*/src/index.tsx", "../../packages/libs/*/src/index.ts"]
 		}
