--- a/packages/apps/campaign/package.json
+++ b/packages/apps/campaign/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@kilcekru/dcc-lib-components": "workspace:*",
 		"@kilcekru/dcc-lib-rpc": "workspace:*",
+		"@kilcekru/dcs-coordinates": "0.5.0",
 		"@zag-js/checkbox": "0.2.8",
 		"@zag-js/dialog": "0.2.7",
 		"@zag-js/editable": "0.2.8",
@@ -24,7 +25,7 @@
 		"solid-js": "1.6.2"
 	},
 	"devDependencies": {
-		"@foxdelta2/dcsjs": "0.2.215",
+		"@foxdelta2/dcsjs": "0.2.216",
 		"@types/leaflet": "1.9.0"
 	}
 }
