--- a/packages/libs/components/package.json
+++ b/packages/libs/components/package.json
@@ -9,15 +9,18 @@
 		"validate:ts": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@zag-js/checkbox": "0.2.8",
-		"@zag-js/dialog": "0.2.7",
-		"@zag-js/editable": "0.2.8",
-		"@zag-js/pressable": "0.3.7",
-		"@zag-js/solid": "0.2.5",
+		"@zag-js/checkbox": "0.8.0",
+		"@zag-js/dialog": "0.8.0",
+		"@zag-js/editable": "0.8.0",
+		"@zag-js/hover-card": "0.8.0",
+		"@zag-js/pressable": "0.8.0",
+		"@zag-js/solid": "0.8.0",
+		"@zag-js/toast": "0.8.0",
+		"@zag-js/tooltip": "0.8.0",
 		"cnbuilder": "3.1.0",
 		"solid-js": "1.6.2"
 	},
 	"devDependencies": {
-		"@foxdelta2/dcsjs": "0.2.216"
+		"@foxdelta2/dcsjs": "0.2.217"
 	}
 }
