feat(campaign): app launcher styling

--- a/packages/apps/launcher/package.json
+++ b/packages/apps/launcher/package.json
@@ -9,6 +9,7 @@
 		"validate:ts": "tsc --noEmit"
 	},
 	"dependencies": {
+		"cnbuilder": "3.1.0",
 		"solid-js": "1.6.2",
 		"@kilcekru/dcc-lib-rpc": "workspace:*"
 	}
