build: enable asar in forge

--- a/.gitignore
+++ b/.gitignore
@@ -237,4 +237,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos,visualstudiocode
 
 # Custom
+/forge/vbs
 .turbo
