--- a/packages/apps/home/package.json
+++ b/packages/apps/home/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@kilcekru/dcc-app-launcher",
+	"name": "@kilcekru/dcc-app-home",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -9,8 +9,8 @@
 		"validate:ts": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@kilcekru/dcc-lib-rpc": "workspace:*",
 		"cnbuilder": "3.1.0",
-		"solid-js": "1.6.2",
-		"@kilcekru/dcc-lib-rpc": "workspace:*"
+		"solid-js": "1.6.2"
 	}
 }
