--- a/forge/package.json
+++ b/forge/package.json
@@ -12,7 +12,7 @@
 	},
 	"engines": {
 		"node": ">=18.12.0",
-		"pnpm": ">=7.15.0 <=7.18.2"
+		"pnpm": ">=8.6.0"
 	},
 	"scripts": {
 		"clean": "rm -rf dist out",
