--- a/packages/chief/core/package.json
+++ b/packages/chief/core/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@foxdelta2/dcsjs": "0.2.223",
+		"adm-zip": "^0.5.10",
 		"chokidar": "^3.5.3",
 		"electron-squirrel-startup": "^1.0.0",
 		"fs-extra": "^11.1.0",
@@ -17,6 +18,7 @@
 	},
 	"devDependencies": {
 		"@kilcekru/dcc-shared-rpc-types": "workspace:*",
+		"@types/adm-zip": "^0.5.0",
 		"@types/fs-extra": "^9.0.13",
 		"@types/node": "^18.11.10",
 		"electron": "22.0.0"
