--- a/packages/apps/campaign/package.json
+++ b/packages/apps/campaign/package.json
@@ -22,10 +22,12 @@
 		"fast-astar": "1.0.6",
 		"leaflet": "1.9.3",
 		"milsymbol": "2.0.0",
-		"solid-js": "1.6.2"
+		"solid-js": "1.6.2",
+		"uuid": "9.0.0"
 	},
 	"devDependencies": {
-		"@foxdelta2/dcsjs": "0.2.226",
-		"@types/leaflet": "1.9.0"
+		"@foxdelta2/dcsjs": "0.2.227",
+		"@types/leaflet": "1.9.0",
+		"@types/uuid": "9.0.2"
 	}
 }
