--- a/packages/chief/core/package.json
+++ b/packages/chief/core/package.json
@@ -14,7 +14,8 @@
 		"chokidar": "^3.5.3",
 		"electron-squirrel-startup": "^1.0.0",
 		"fs-extra": "^11.1.0",
-		"regedit": "^5.1.1"
+		"regedit": "^5.1.1",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@kilcekru/dcc-shared-rpc-types": "workspace:*",
