--- a/packages/apps/campaign/package.json
+++ b/packages/apps/campaign/package.json
@@ -23,10 +23,11 @@
 		"leaflet": "1.9.3",
 		"milsymbol": "2.0.0",
 		"solid-js": "1.6.2",
-		"uuid": "9.0.0"
+		"uuid": "9.0.0",
+		"zod": "3.21.4"
 	},
 	"devDependencies": {
-		"@foxdelta2/dcsjs": "0.2.229-next.13",
+		"@foxdelta2/dcsjs": "0.2.229-next.16",
 		"@types/leaflet": "1.9.0",
 		"@types/uuid": "9.0.2"
 	}
