--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"main": "src/index.js",
 	"author": {
 		"name": "Kilcekru",
-		"email": "kilcekru@unkreativ.at"
+		"email": "kilcekru@digitalcrewchief.at"
 	},
 	"repository": {
 		"type": "git",
