--- a/packages/apps/campaign/package.json
+++ b/packages/apps/campaign/package.json
@@ -27,7 +27,7 @@
 		"zod": "3.21.4"
 	},
 	"devDependencies": {
-		"@foxdelta2/dcsjs": "0.2.229",
+		"@foxdelta2/dcsjs": "0.2.230-next.1",
 		"@types/leaflet": "1.9.0",
 		"@types/uuid": "9.0.2"
 	}
