--- a/forge/package.json
+++ b/forge/package.json
@@ -5,7 +5,7 @@
 	"description": "Digital Crew Chief",
 	"private": true,
 	"license": "MIT",
-	"main": "dist/chief/index.js",
+	"main": "dist/chief/core.js",
 	"author": {
 		"name": "Kilcekru",
 		"email": "kilcekru@digitalcrewchief.at"
