--- a/packages/chief/menu/package.json
+++ b/packages/chief/menu/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@kilcekru/dcc-shared-types",
+	"name": "@kilcekru/dcc-chief-menu",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -9,9 +9,7 @@
 		"validate:ts": "tsc --noEmit"
 	},
 	"dependencies": {
-		"zod": "^3.21.4"
-	},
-	"devDependencies": {
-		"@foxdelta2/dcsjs": "0.2.230-next.2"
+		"cnbuilder": "3.1.0",
+		"solid-js": "1.7.7"
 	}
 }
