feat(capture): add capture

--- a/.gitignore
+++ b/.gitignore
@@ -237,5 +237,6 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos,visualstudiocode
 
 # Custom
+/.tmp
 /forge/vbs
 .turbo
