--- a/packages/chief/core/package.json
+++ b/packages/chief/core/package.json
@@ -15,6 +15,7 @@
 		"electron-squirrel-startup": "^1.0.0",
 		"fs-extra": "^11.1.1",
 		"regedit": "^5.1.2",
+		"sudo-prompt": "^9.2.1",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
