--- a/packages/apps/capture/package.json
+++ b/packages/apps/capture/package.json
@@ -5,10 +5,10 @@
 	"scripts": {
 		"clean": "rm -rf .turbo",
 		"clean:all": "rm -rf .turbo node_modules",
-		"validate:lint": "eslint src",
+		"validate:lint": "eslint src --max-warnings 0",
 		"validate:ts": "tsc --noEmit"
 	},
 	"dependencies": {
-		"solid-js": "1.7.7"
+		"solid-js": "1.8.3"
 	}
 }
