--- a/packages/chief/menu/package.json
+++ b/packages/chief/menu/package.json
@@ -5,11 +5,11 @@
 	"scripts": {
 		"clean": "rm -rf .turbo",
 		"clean:all": "rm -rf .turbo node_modules",
-		"validate:lint": "eslint src",
+		"validate:lint": "eslint src --max-warnings 0",
 		"validate:ts": "tsc --noEmit"
 	},
 	"dependencies": {
 		"cnbuilder": "3.1.0",
-		"solid-js": "1.7.7"
+		"solid-js": "1.8.3"
 	}
 }
