--- a/packages/chief/preload/package.json
+++ b/packages/chief/preload/package.json
@@ -5,11 +5,11 @@
 	"scripts": {
 		"clean": "rm -rf .turbo",
 		"clean:all": "rm -rf .turbo node_modules",
-		"validate:lint": "eslint src",
+		"validate:lint": "eslint src --max-warnings 0",
 		"validate:ts": "tsc --noEmit"
 	},
 	"devDependencies": {
-		"@types/node": "^20.4.1",
-		"electron": "25.2.0"
+		"@types/node": "^20.8.9",
+		"electron": "27.0.2"
 	}
 }
