--- a/packages/apps/campaign/package.json
+++ b/packages/apps/campaign/package.json
@@ -25,7 +25,7 @@
 		"zod": "3.22.4"
 	},
 	"devDependencies": {
-		"@foxdelta2/dcsjs": "0.3.1",
+		"@foxdelta2/dcsjs": "0.4.0-next.1",
 		"@types/leaflet": "1.9.7",
 		"@types/uuid": "9.0.6"
 	}
