--- a/packages/chief/core/package.json
+++ b/packages/chief/core/package.json
@@ -9,7 +9,7 @@
 		"validate:ts": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@foxdelta2/dcsjs": "0.3.1",
+		"@foxdelta2/dcsjs": "0.4.0-next.1",
 		"adm-zip": "^0.5.10",
 		"chokidar": "^3.5.3",
 		"electron-fetch": "^1.9.1",
