--- a/packages/shared/utils/package.json
+++ b/packages/shared/utils/package.json
@@ -9,6 +9,6 @@
 		"validate:ts": "tsc --noEmit"
 	},
 	"devDependencies": {
-		"@foxdelta2/dcsjs": "0.3.1"
+		"@foxdelta2/dcsjs": "0.4.0-next.1"
 	}
 }
