--- a/packages/workers/campaign/package.json
+++ b/packages/workers/campaign/package.json
@@ -9,5 +9,7 @@
 		"validate:ts": "tsc --noEmit"
 	},
 	"dependencies": {},
-	"devDependencies": {}
+	"devDependencies": {
+		"@foxdelta2/dcsjs": "0.4.0-next.3"
+	}
 }
