feat(worker-campaign): refactor structure

--- a/packages/workers/campaign/tsconfig.json
+++ b/packages/workers/campaign/tsconfig.json
@@ -1,4 +1,7 @@
 {
 	"extends": "../../../utils/config/tsconfig.ui.json",
+	"compilerOptions": {
+		"lib": ["WebWorker", "ES2021"]
+	},
 	"include": ["src"]
 }
