--- a/packages/workers/campaign/package.json
+++ b/packages/workers/campaign/package.json
@@ -8,7 +8,9 @@
 		"validate:lint": "eslint src --max-warnings 0",
 		"validate:ts": "tsc --noEmit"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"zod": "^3.22.4"
+	},
 	"devDependencies": {
 		"@foxdelta2/dcsjs": "0.4.0-next.3"
 	}
