--- a/packages/apps/campaign/package.json
+++ b/packages/apps/campaign/package.json
@@ -22,7 +22,9 @@
 		"milsymbol": "2.2.0",
 		"solid-js": "1.7.7",
 		"uuid": "9.0.0",
-		"zod": "3.21.4"
+		"zod": "3.21.4",
+		"zustand": "4.5.2",
+		"solid-zustand": "1.8.0"
 	},
 	"devDependencies": {
 		"@foxdelta2/dcsjs": "0.3.1",
